feat: rebuild app experience and local setup